# toop_legacy

./: .gitignore  Cargo.toml  build.gradle.kts  build.rs  settings.gradle.kts
.cargo/: config.toml
boot/eltorito/: README.md  build.gradle.kts  linker.ld
boot/eltorito/src/: eltorito.S  eltorito.c
boot/loader/: build.gradle.kts
boot/loader/src/: libelf.h  loader.c  loader.h
boot/loader/src/x86/: loader_x86.S  loader_x86.c
boot/multiboot/: build.gradle.kts
boot/multiboot/src/: multiboot.S  multiboot.c  multiboot.s  multiboot2.h
boot/multiboot2/: build.gradle.kts
boot/multiboot2/src/: multiboot2.S  multiboot2.c  multiboot2.h
boot/src/: libelf.h  loader.c  loader.h
boot/src/x86/: loader_x86.S  loader_x86.c
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: package.kt
buildSrc/src/main/kotlin/clang/: AsmObjectPlugin.kt  ClangObjectPlugin.kt  ObjcopyPlugin.kt  ObjectLinkingPlugin.kt
buildSrc/src/main/kotlin/clang/task/: ClangTask.kt  LdTask.kt  ObjcopyTask.kt
buildSrc/src/main/kotlin/iso/: IsoPlugin.kt
buildSrc/src/main/kotlin/iso/task/: XorrisoTask.kt
buildSrc/src/main/kotlin/rust/: RustExtension.kt  RustPlugin.kt
buildSrc/src/main/kotlin/rust/task/: CargoTask.kt  CargoXBuildTask.kt
src/main/rstargets/: x86-toop.json  x86.json
src/main/rust/: boot.rs  main.rs  mem.rs  mod.rs  panic_handler.rs  vga.rs
src/main/rust/arch/: mod.rs
src/main/rust/arch/x86/: gdt.rs  mod.rs
test-env/: build.gradle.kts
