[package]
name = "toop"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "toop"
path = "src/main/rust/main.rs"
test = false
doctest = false
bench = false

[dependencies]
spin = "0.9.4"
bitflags = "1.3.2"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[target.'cfg(target_arch = "x86")'.dependencies]
x86 = "0.51.0"
